# FTC-Configuration-Helper

./: .gitignore  AUTHORS  ChangeLog  INSTALL  LICENSE  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen.sh  configure.ac  configure.unix.sh  configure.win32.bat  configure_win.bat  setup.win32.bat
scripts/: default-footer.bat  defaults.post  defaults.pre  help.stc  setup-wlan.stc  wlan-conf-parser.bat
scripts/includes/: check_help_args.bat  toupper.bat
tests/: test.java
windows/ps/: wget.ps
windows/scripts/: configure.devices.pre  default-footer.bat  default-header.bat  defaults.pre  license.stc  setup-wlan.stc  start-wlan.stc  stop-wlan.stc  wlan-conf-parser.bat
windows/scripts/includes/: check_args.inc.bat  check_help_args.bat  toupper.bat  toupper.inc.bat
windows/scripts/vbs/: shortcut.vbs
windows/src/gui/: ApplicationEvents.vb  DownloadDetails.vb  Downloader.vb  FTC Config Helper.sln  GUI.Designer.vb  GUI.resx  Gui.vb  Installer.vb  Launch.vb  Setup.vbproj  configure.Designer.vb  gui.sln  gui.vbproj  setup.Designer.vb  setup.vb  wlan-manager.Designer.vb
windows/src/gui/Configure/: ApplicationEvents.vb  Configure.vbproj  GUI.Designer.vb  GUI.resx  GUI.vb  configure.vb
windows/src/gui/My Project/: Application.Designer.vb  Application.myapp  AssemblyInfo.vb  Resources.Designer.vb  Settings.Designer.vb  app.manifest
windows/src/gui/WLAN Manager/: Form1.Designer.vb  Form1.vb  WLAN Manager.vbproj  wlan-manager.vb
windows/src/regex/: ReadMe.txt  regex.cpp  regex.vcxproj  regex.vcxproj.filters  stdafx.cpp
(+12 files in other folders)
